option(Utilities_IPCAI2019 "Enable the Application for IPCAI 2019 conference" OFF)
if (${Utilities_IPCAI2019})
	add_subdirectory(Conf_IPCAI2019)
endif(${Utilities_IPCAI2019})
option(MukUtilities_MICCAI2019 "Enable the experiment application for MICCAI 2019 conference" OFF)
if (${MukUtilities_MICCAI2019})
	add_subdirectory(Conf_MICCAI2019)
endif()